Admin Route Controller works fine
