# server/Services/StopToRouteService.cs
@@ -2,6 +2,7 @@ using System.Collections.Generic;
 using System.Linq;
 using Server.Database;
 using Server.Models;
+using Server.ModelsDTO;
 
 namespace Server.Services
 {
@@ -13,6 +14,32 @@ namespace Server.Services
         public StopToRouteService(TrainSystemContext context)
         {
             _context = context;
+        }
+
+        public List<StopToRoute> AddStops(List<RouteStopDTO> list, int routeId)
+        {
+            List<StopToRoute> stops = list.Select(x => new StopToRoute
+            {
+                RouteId = routeId,
+                TrainStopId = x.StopId,
+                HoursDiff = x.HoursDiff,
+                MinutesDiff = x.MinutesDiff,
+                StopNo = x.StopNo
+            }).ToList();
+            
+            _context.AddRange(stops);
+            _context.SaveChanges();
+
+            return stops; 
+        }
+
+        public void DeleteStops(int id)
+        {
+            var stops = from s in _context.StopsToRoutes
+                where s.RouteId == id
+                select s;
+            
+            _context.RemoveRange(stops);
         }
 
         public List<int> GetRoutes(int from, int to)
